<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CLFC - Integrated Lending System</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txt_appno">App. No.</string>
    <string name="txt_acctname">Acct. Name</string>
    <string name="txt_loanamount">Loan Amount</string>
    <string name="txt_balance">Total Balance</string>
    <string name="txt_schedofpayment">Sched. of Payment</string>
    <string name="txt_amountdue">Amount Due</string>
    <string name="txt_overpayment">Overpayment</string>
    <string name="txt_penalty">Penalty</string>
    <string name="txt_dtmatured">Maturity Date</string>
    <string name="txt_empty"></string>
    <string name="txt_refno">Ref. No.</string>
    <string name="txt_txndate">Txn Date</string>
    <string name="txt_type">Type</string>
    <string name="txt_amount">Amount</string>
    <string name="txt_info_general">General</string>
    <string name="txt_info_payment">Payment(s)</string>
    <string name="semicolon">:</string>
    <string name="img_check_ico">check icon</string>
    <string name="txt_ip_host">Host Address</string>
    <string name="txt_ip_port">Port</string>
    <string name="txt_btn_cancel">Cancel</string>
    <string name="txt_btn_login">Login</string>
    <string name="txt_hint_username">USERNAME</string>
    <string name="txt_hint_password">PASSWORD</string>
    <string name="txt_hint_search">Search</string>
    <string name="txt_btn_ok">OK</string>
    <string name="txt_payment_schedule">Schedule/Advance</string>
    <string name="txt_payment_over">Overpayment</string>
    <string name="txt_term_schedule">Schedule</string>
    <string name="txt_term_overpayment">Overpayment</string>
    <string name="txt_address_home">Home Address</string>
    <string name="txt_address_collection">Collection Address</string>
    <string name="txt_interest">Unpaid Interest</string>
	<string name="txt_info_penalty">Penalty</string>
	<string name="txt_others">Others</string>
	<string name="txt_term">Term</string>
	<string name="header_route">Select a Route:</string>
	<string name="txt_info_remarks">Remarks</string>
	<string name="btn_change_date">Change Date</string>
	<string name="txt_notes_fromdate">From:</string>
	<string name="txt_notes_todate">To:</string>
	<string name="txt_info_notes">Note(s)</string>
	<string name="txt_fromdate">From Date</string>
	<string name="txt_todate">To Date</string>
	<string name="txt_remarks">Remarks</string>
	<string name="txt_overlay_void_pending">VOID REQUEST PENDING</string>
	<string name="txt_overlay_void_approved">VOID APPROVED</string>
	<string name="txt_borrowerimg">Borrower Image</string>
	<string name="txt_specialcollection_request">Special Collection Request(s)</string>
	<string name="txt_paidby">Paid By</string>
	<string name="txt_url">URL</string>
	<string name="header_host">Host</string>
	<string name="txt_online">Online</string>
	<string name="txt_offline">Offline</string>
	<string name="txt_port">Port</string>
	<string name="header_timeout">Time out</string>
	<string name="txt_timeout_session">Session (sec.)</string>
	<string name="txt_timeout_upload">Upload (sec.)</string>
	<string name="txt_timeout_tracker">Tracker (sec.)</string>
	<string name="btn_save">Save</string>
	<string name="txt_mode">NOT CONNECTED</string>
	<string name="txt_posted">Posted</string>
	<string name="txt_unposted">Unposted</string>
	<string name="txt_registration_header">Registration</string>
	<string name="txt_registration_text">This device is not yet registered. Terminal registration is required for performing secured transactions. Please choose a type of action below:</string>
	<string name="btn_next">Next</string>
	<string name="rbtn_register_terminal">Register new terminal</string>
	<string name="rbtn_recover_terminal">Recover existing terminal</string>
	<string name="tag_register">register</string>
	<string name="tag_recover">recover</string>
	<string name="txt_registration_new_header">New Terminal Registration</string>
	<string name="txt_registration_new_text">Please fill in the information below. Contact system administrator for assistance.</string>
	<string name="txt_registration_terminalkey">Terminal Key</string>
	<string name="txt_registration_registeredby">Registered By</string>
	<string name="btn_back">Back</string>
	<string name="btn_register">Register</string>
	<string name="txt_login">Login</string>
	<string name="txt_changepassword_header">Change Password</string>
	<string name="txt_changepassword_old">OLD PASSWORD</string>
	<string name="txt_changepassword_new">NEW PASSWORD</string>
	<string name="txt_changepassword_confirm">CONFIRM PASSWORD</string>
	<string name="btn_ok">Ok</string>
</resources>