<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
       android:id="@+id/scrollView1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical" >

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingTop="20dp" >

               <TextView
                   android:id="@+id/login_username"
                   android:layout_width="80dp"
                   android:layout_height="wrap_content"
                   android:layout_alignTop="@+id/tv_payment_refno"
                   android:text="@string/txt_refno"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <TextView
                   android:id="@+id/textView4"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_toRightOf="@+id/login_username"
                   android:text="@string/semicolon"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <TextView
                   android:id="@+id/tv_payment_refno"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentBottom="true"
                   android:layout_alignParentRight="true"
                   android:layout_marginLeft="5dp"
                   android:layout_toRightOf="@+id/textView4"
                   android:text="@string/txt_empty"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

           </RelativeLayout>

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingBottom="5dp"
               android:paddingTop="10dp" >

               <TextView
                   android:id="@+id/textView2"
                   android:layout_width="80dp"
                   android:layout_height="wrap_content"
                   android:text="@string/txt_txndate"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <TextView
                   android:id="@+id/textView5"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_toRightOf="@+id/textView2"
                   android:text="@string/semicolon"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <TextView
                   android:id="@+id/tv_payment_txndate"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentRight="true"
                   android:layout_alignParentTop="true"
                   android:layout_marginLeft="5dp"
                   android:layout_toRightOf="@+id/textView5"
                   android:text="@string/txt_empty"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

           </RelativeLayout>

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingTop="5dp" >

               <TextView
                   android:id="@+id/textView3"
                   android:layout_width="80dp"
                   android:layout_height="wrap_content"
                   android:layout_alignBaseline="@+id/et_payment_amount"
                   android:text="@string/txt_amount"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <TextView
                   android:id="@+id/textView6"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignBaseline="@+id/et_payment_amount"
                   android:layout_toRightOf="@+id/textView3"
                   android:text="@string/semicolon"
                   android:textAppearance="?android:attr/textAppearanceMedium" />

               <EditText
                   android:id="@+id/et_payment_amount"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentTop="true"
                   android:layout_marginLeft="5dp"
                   android:layout_toRightOf="@+id/textView6"
                   android:ems="10"
                   android:inputType="numberDecimal" />

           </RelativeLayout>

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingBottom="20dp"
               android:paddingTop="20dp" >

               <Button
                   android:id="@+id/btn_payment_ok"
                   android:layout_width="80dp"
                   android:layout_height="wrap_content"
                   android:layout_alignParentRight="true"
                   android:layout_alignParentTop="true"
                   android:layout_marginRight="20dp"
                   android:gravity="center_vertical|center_horizontal"
                   android:text="@string/txt_btn_ok" />

           </RelativeLayout>
       </LinearLayout>
   </ScrollView>